Revert "fix collapse line ie"
This reverts commit a7f8900ee11d9e76d9d4b127f8bb28e2e6e8d222.

--- a/less/ui/accordions.less
+++ b/less/ui/accordions.less
@@ -4,12 +4,6 @@
 .panel-group .panel {
 	box-shadow: none;
 }
-.panel-group {
-	a: focus {
-		border: 0 !important;
-	}
-}
-
 .panel-group .panel-heading {
 	padding: 10px 0;
 }
